yiltc-go-backup/testsuite/negative/type_mismatch.yilt
fn main()
    let x bool = 42
